--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
-    "d3-shape": "https://aistudiocdn.com/d3-shape@^3.2.0",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0"
+    "d3-shape": "https://aistudiocdn.com/d3-shape@^3.2.0"
   }
 }
 </script>
